[package]
name = "CellSimulation"
version = "0.1.0"
edition = "2021"

[features]
graphics = []

[dependencies]
ctrlc = "3.4.5"
minifb = "0.27.0"
pprof = { version = "0.14.0", features = ["flamegraph"] }
rand = "0.8.5"
rustc-hash = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
