[package]
name = "CellSimulation"
version = "0.1.0"
edition = "2021"

[features]
graphics = ["minifb"]
profiling = ["pprof"]

[dependencies]
bincode = "1.3.3"
ctrlc = "3.4.5"
minifb = { version = "0.27.0", optional = true }
pprof = { version = "0.14.0", features = ["flamegraph"], optional = true }
rand = "0.8.5"
rustc-hash = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
